--- a/src/components/Statistics/statistic.module.css
+++ b/src/components/Statistics/statistic.module.css
@@ -2,10 +2,11 @@
   width: 335px;
   margin: auto;
   border: solid 1px rgb(211, 221, 221);
+  margin-bottom: 20px;
 }
 
 .title {
-  font-size: 16px;
+  font-size: 32px;
   color: #61676e;
   text-align: center;
   margin-top: 30px;
@@ -16,14 +17,6 @@
   list-style: none;
   height: 55px;
   display: flex;
-}
-
-@keyframes  random {
-    15% { background-color: red; } 
-    30% { background-color: yellow; } 
-    45% { background-color: green; } 
-    60% { background-color: blue; }
-    75% { background-color: white; }  
 }
 
 .item {
